# quenda

./: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml
.github/workflows/: publish-quenda-code.yml  publish-quenda.yml  publish.yml
.kora/: workspace.yaml
agents/kora-code/: README.md  pyproject.toml
agents/kora-code/src/kora_code/: __about__.py  __init__.py
agents/kora-code/src/kora_code/agent/: AGENT.md  config.yaml
agents/kora-code/src/kora_code/agent/extensions/commands/: status.py
agents/kora-code/src/kora_code/agent/instructions/: coding.md  communication.md  mode-architect.md
agents/kora-code/src/kora_code/agent/skills/code-review/: SKILL.md
agents/kora-code/src/kora_code/agent/skills/code-review/references/: review-checklist.md
agents/kora-code/src/kora_code/agent/skills/code-review/templates/: review-report.md
agents/quenda-code/: README.md  pyproject.toml
agents/quenda-code/src/quenda_code/: __about__.py  __init__.py
agents/quenda-code/src/quenda_code/agent/: AGENT.md  config.yaml
agents/quenda-code/src/quenda_code/agent/extensions/commands/: status.py
agents/quenda-code/src/quenda_code/agent/instructions/: mode-code.md
agents/quenda-code/src/quenda_code/agent/skills/calculate/: SKILL.md
agents/quenda-code/src/quenda_code/agent/skills/calculate/scripts/: add.py  divide.py  multiply.py  subtract.py
agents/quenda-code/src/quenda_code/agent/skills/claude-api/: SKILL.md
agents/quenda-code/src/quenda_code/agent/skills/code-review/: SKILL.md
agents/quenda-code/src/quenda_code/agent/skills/code-review/references/: python-style.md
agents/quenda-code/src/quenda_code/agent/skills/code-review/templates/: review-report.md
agents/quenda-code/src/quenda_code/agent/skills/doc-coauthoring/: SKILL.md
agents/quenda-code/src/quenda_code/agent/skills/docx/: SKILL.md
agents/quenda-code/src/quenda_code/agent/skills/frontend-design/: SKILL.md
agents/quenda-code/src/quenda_code/agent/skills/mcp-builder/: SKILL.md
agents/quenda-code/src/quenda_code/agent/skills/pdf/: SKILL.md
agents/quenda-code/src/quenda_code/agent/skills/playwright/: SKILL.md
agents/quenda-code/src/quenda_code/agent/skills/playwright/scripts/: __init__.py  export_pdf.py  fetch_js.py  interact.py  screenshot.py
agents/quenda-code/src/quenda_code/agent/skills/pptx/: SKILL.md
agents/quenda-code/src/quenda_code/agent/skills/skill-creator/: SKILL.md
agents/quenda-code/src/quenda_code/agent/skills/webapp-testing/: SKILL.md
agents/quenda-code/src/quenda_code/agent/skills/xlsx/: SKILL.md
docs/: CURRENT.md  PM-REPORT-2026-06-23.md  TECH-RADAR.md  api.md  getting-started.md  skills.md  tools.md
docs/architecture/: agent-lifecycle-hooks-and-policy-extension.md  agent-local-custom-tool-registration-and-config-resolution.md  hook-input-output-matrix.md  hook-interface-drafts.md  hook-mvp-prioritization.md  host-text-refresh-and-capability-binding-flow.md  multimodal-implementation-review.md  multimodal-intent-routing.md  multimodal-roadmap.md  multimodal-support-design.md  policy-registration-and-hook-configuration.md  research-support-matrix-and-next-phase-expansion.md  skill-turn-boundary-reload-semantics.md  slash-command-system-enhancement.md  tool-phase-runtime-ownership-and-policy-control.md  tool-phase-runtime-refactor-breakdown.md  verification-and-memory-lifecycle-extension.md
docs/decisions/: 000-language-and-core-features.md  001-async-and-tool-definition.md  002-skills-capability-packages.md  003-host-name-and-boundary.md  004-workspace-identity-and-user-agent-state.md  005-kora-code-agent-mvp.md  006-interface-event-rendering.md  007-instruction-layer-and-scope-overlay.md  008-slash-commands-and-context-rebuild.md  008-tool-schema-single-source.md  009-tool-output-folding.md  010-agent-command-extensions.md  011-repl-command-hints.md  012-interaction-requests-and-choice-controls.md  013-agent-package-distribution.md  014-interface-layer-extensibility.md  019-strategy-hooks-over-rich-ui.md  (+14 more)
examples/: common.py  demo_auto.py  demo_kernel.py  demo_observability.py  demo_quickstart.py  demo_real_model.py  demo_runtime.py
tests/: debug_multimodal.py  test_api.py  test_cli_interrupt.py  test_commands.py  test_context_runtime.py  test_import.py  test_instructions.py  test_kernel.py  test_kernel_types.py  test_multimodal.py  test_repl_multimodal.py  test_runtime.py  test_tools.py
(+307 files in other folders)
