[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kora-code"
version = "0.1.5"
description = "Kora's official coding agent"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    { name = "xvshiting" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "kora-agent>=0.1.0",
]

[project.entry-points."kora.agents"]
kora-code = "kora_code"

[project.urls]
Homepage = "https://github.com/xvshiting/kora"
Repository = "https://github.com/xvshiting/kora/tree/main/agents/kora-code"
Documentation = "https://github.com/xvshiting/kora#readme"
Issues = "https://github.com/xvshiting/kora/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/kora_code"]

[tool.ruff]
line-length = 100
target-version = "py312"
