[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quenda-code"
version = "0.1.6"
description = "Quenda's official coding agent"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    { name = "xvshiting" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "quenda>=0.1.0",
]

[project.entry-points."quenda.agents"]
quenda-code = "quenda_code"

[project.urls]
Homepage = "https://github.com/xvshiting/quenda"
Repository = "https://github.com/xvshiting/quenda/tree/main/agents/quenda-code"
Documentation = "https://github.com/xvshiting/quenda#readme"
Issues = "https://github.com/xvshiting/quenda/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/quenda_code"]

[tool.ruff]
line-length = 100
target-version = "py312"
